--- a/layout.ui
+++ b/layout.ui
@@ -19,7 +19,13 @@
   <property name="dockNestingEnabled">
    <bool>true</bool>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <widget class="QGraphicsView" name="graphicsView"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -112,7 +118,7 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="10" column="0">
+     <item row="8" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -142,7 +148,7 @@
           </sizepolicy>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>1</number>
          </property>
          <widget class="QWidget" name="rgb_color_sliders">
           <attribute name="title">
@@ -158,6 +164,9 @@
            </item>
            <item row="0" column="1">
             <widget class="QSlider" name="red_slider">
+             <property name="maximum">
+              <number>255</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -172,6 +181,9 @@
            </item>
            <item row="1" column="1">
             <widget class="QSlider" name="green_rgb_slider">
+             <property name="maximum">
+              <number>255</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -186,6 +198,9 @@
            </item>
            <item row="2" column="1">
             <widget class="QSlider" name="blue_rgb_slider">
+             <property name="maximum">
+              <number>255</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -200,8 +215,20 @@
            </item>
            <item row="3" column="1">
             <widget class="QSlider" name="alpha_rgb_slider">
+             <property name="maximum">
+              <number>255</number>
+             </property>
+             <property name="value">
+              <number>255</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="invertedAppearance">
+              <bool>false</bool>
+             </property>
+             <property name="invertedControls">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
@@ -221,6 +248,9 @@
            </item>
            <item row="0" column="1">
             <widget class="QSlider" name="hue_slider">
+             <property name="maximum">
+              <number>360</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -235,6 +265,9 @@
            </item>
            <item row="1" column="1">
             <widget class="QSlider" name="saturation_slider">
+             <property name="maximum">
+              <number>100</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -249,6 +282,9 @@
            </item>
            <item row="2" column="1">
             <widget class="QSlider" name="value_slider">
+             <property name="maximum">
+              <number>100</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -263,6 +299,12 @@
            </item>
            <item row="3" column="1">
             <widget class="QSlider" name="alpha_hsv_slider">
+             <property name="maximum">
+              <number>255</number>
+             </property>
+             <property name="value">
+              <number>255</number>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -274,19 +316,6 @@
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout">
-         <item row="3" column="1">
-          <spacer name="verticalSpacer_5">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
          <item row="0" column="0" colspan="3">
           <spacer name="verticalSpacer_4">
            <property name="orientation">
@@ -376,11 +405,24 @@
           </widget>
          </item>
          <item row="1" column="0" colspan="3">
-          <widget class="QPushButton" name="pushButton">
+          <widget class="QPushButton" name="color_pick_btn">
            <property name="text">
             <string>Pick with dialog</string>
            </property>
           </widget>
+         </item>
+         <item row="3" column="0" colspan="3">
+          <spacer name="verticalSpacer_5">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
          </item>
         </layout>
        </item>
@@ -425,7 +467,7 @@
           <x>0</x>
           <y>0</y>
           <width>226</width>
-          <height>87</height>
+          <height>115</height>
          </rect>
         </property>
        </widget>
